k8s/ingress/katib-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: katib-ingress
  namespace: kubeflow
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: katib.254carbon.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: katib-ui
            port:
              number: 80
  tls:
  - hosts:
    - katib.254carbon.com
    secretName: katib-tls
